# unlimiteddrinks

.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  compose.yaml  pgadmin.json  pyproject.toml  railway.json
backend/app/: main.py  run.py  settings.py
backend/app/api/: router.py
backend/app/api/address/: api.py  models.py
backend/app/api/category/: api.py  models.py
backend/app/api/customer/: api.py  models.py
backend/app/api/orders/: api.py  models.py
backend/app/api/product/: api.py  models.py
backend/app/api/review/: api.py  models.py
backend/app/db/: data.json  schema.py
frontend/: index.html  quasar.config.cjs
frontend/src/boot/: auth0.js  axios.js
frontend/src/components/: FooterComponent.vue  NavBar.vue
frontend/src/pages/: AccountSettings.vue  ErrorNotFound.vue  IndexPage.vue  OrderCheckout.vue  SetupAccount.vue
frontend/src/router/: index.js
