[tool.poetry]
name = "unlimiteddrinks-backend"
version = "0.1.0"
description = ""
authors = ["Hamzeh Abdallah <hamzehhabdallah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
loguru = "^0.7.2"
aerich = "^0.7.2"
pydantic-settings = "^2.0.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
tortoise-orm = {extras = ["accel", "asyncpg"], version = "^0.20.0"}
stripe = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
